--- a/common.css
+++ b/common.css
@@ -1,10 +1,13 @@
-
 body {
     background-image: url("images/background.jpeg");
     background-color: #cccccc;
     background-position: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-attachment: fixed;
+}
+
+h1, h2, h3, h4 {
+    text-align: center;
 }
 
 header {
@@ -83,4 +86,9 @@ img, .plotly-graph-div {
     opacity: unset;
     margin-left: auto;
     margin-right: auto;
+}
+
+section.references p {
+    text-indent: -36px;
+    padding-left: 36px;
 }
